<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:layout_marginLeft="@dimen/activity_horizontal_margin"
    android:layout_marginRight="@dimen/activity_horizontal_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edit_name_text"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:maxLines="1" />

            <ImageButton
                android:id="@+id/edit_name_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_edit" />

        </LinearLayout>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/words_selection_card"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/words_selection_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:text="@string/pack_button_words_selection" />

            <TextView
                android:id="@+id/words_selection_counter"
                style="@style/HelperTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/counter_pages" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/words_list_card"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/words_list_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:text="@string/pack_button_words_list" />

            <TextView
                android:id="@+id/words_list_counter"
                style="@style/HelperTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/counter_translations"
                card_view:cardCornerRadius="5dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cards_draw_card"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/cards_draw_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_horizontal"
                android:text="@string/pack_button_cards_draw" />

            <TextView
                android:id="@+id/cards_draw_counter"
                style="@style/HelperTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="5dp"
                android:text="@string/counter_cards"
                card_view:cardCornerRadius="5dp" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/training_en_ru_card"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/training_en_ru_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pack_button_en_ru" />

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/training_ru_en_card"
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackground"
            card_view:cardCornerRadius="5dp">

            <TextView
                android:id="@+id/training_ru_en_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/pack_button_ru_en" />

        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>